--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -140,8 +140,8 @@ nav .nav__links a:hover {
 
 .header img {
   margin-top: 50px;
-  max-width: 30rem;
-  width: 70%;
+  max-width: 500px;
+  width: 90%;
 }
 
 .sell {
