--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -95,7 +95,7 @@ nav .nav__links a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
   /* flex-wrap: wrap; */
 }
 
@@ -141,6 +141,7 @@ nav .nav__links a:hover {
 .header img {
   margin-top: 50px;
   max-width: 500px;
+  width: 90%;
 }
 
 .sell {
