--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -93,9 +93,9 @@ nav .nav__links a:hover {
   min-height: 100vh;
   padding: 0 3rem;
   display: flex;
+  justify-content: space-around;
   align-items: center;
   gap: 20px;
-  /* flex-wrap: wrap; */
 }
 
 .header .left__section {
@@ -138,10 +138,8 @@ nav .nav__links a:hover {
 }
 
 .header img {
-  margin-top: 50px;
   max-width: 500px;
   width: 90%;
-  
 }
 
 .sell {
