--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,414 +1,518 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
-  text-decoration: none;
-  font-family: "Ubuntu", sans-serif;
-}
-
-:root {
-  --bg-color: #e0e1dd;
-  --text-color: #778da9;
-  --heading-color: #0d1b2a;
-  --btn-color: #1b263b;
-  --hover-color: #415a77;
-}
-
-body {
-  background-color: var(--bg-color);
+  font-family: "Inter", sans-serif;
 }
 
 a {
   text-decoration: none;
-  transition: all 0.5s ease;
 }
 
-nav {
-  padding: 1rem 3rem;
+ul {
+  list-style-type: none;
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
   align-items: center;
+  gap: 32px;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 1px solid #14213d;
+  border-radius: 24px;
+  padding: 10px 20px;
 }
 
-nav .nav__links {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-nav .nav__links a {
-  color: var(--text-color);
-}
-
-nav .nav__logo {
-  font-size: clamp(1rem, 2vw, 3rem);
-  color: var(--heading-color);
+.navbar__logo a {
   font-weight: 600;
-}
-
-.buttons {
-  display: flex;
-  gap: 0.3rem;
-  align-items: center;
-}
-
-nav button {
-  font-weight: 600;
-  min-width: 6rem;
-  padding: 0.2rem 0;
-  border: 1px solid #0d1b2a;
-  border-radius: 0.6rem;
-  cursor: pointer;
+  color: #14213d;
   transition: all 0.5s ease;
 }
 
-button.sign__up:hover {
-  background-color: var(--hover-color);
-  color: var(--text-color);
+/* .navbar__logo a:hover {
+  color: #fca311;
+} */
+
+.navbar ul {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  gap: 20px;
 }
 
-button.login {
-  background-color: var(--heading-color);
-  color: var(--text-color);
+.navbar ul a {
+  color: #14213d;
+  transition: color 0.5s;
 }
 
-button.login:hover {
-  background-color: var(--text-color);
-  color: var(--heading-color);
+.navbar ul a:hover {
+  color: #fca311;
+}
+
+.navbar button {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  color: #e5e5e5;
+  background-color: #000;
+  padding: 5px 24px;
+  border: 1px solid #e5e5e5;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.5s;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.navbar button:hover {
+  color: #14213d;
+  background-color: #fca311;
+}
+
+.git__buttons button i {
+  font-size: 14px;
 }
 
 .ri-menu-line {
   display: none;
-}
-
-nav .nav__links a:hover {
-  color: var(--hover-color);
-}
-
-.header {
-  min-height: 100vh;
-  padding: 0 3rem;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.header .left__section {
-  display: flex;
-  flex-direction: column;
-  gap: 34px;
-}
-
-.header .left__section h1 {
-  color: var(--heading-color);
-  font-size: clamp(20px, 4vw, 60px);
-}
-
-.header .left__section h1 span {
-  color: var(--hover-color);
-}
-
-.header .left__section p {
-  font-size: clamp(14px, 2.5vh, 50px);
-}
-
-.header .left__section button {
-  width: 150px;
-  padding: 10px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  background-color: var(--btn-color);
-  color: var(--text-color);
-  border: 1px slid #415a77;
-  border-radius: 15px;
-  transition: all 0.5s ease;
-  cursor: pointer;
-}
-
-.header .left__section button:hover {
-  background-color: #e0e1dd;
-  color: var(--heading-color);
-}
-
-.header img {
-  max-width: 500px;
-  width: 90%;
-}
-
-.sell {
-  margin-top: 30px;
-  padding: 0 3rem;
-}
-
-.sell h2 {
-  color: var(--heading-color);
-  margin-bottom: 30px;
-}
-
-.sell .cards {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 20px;
-}
-
-.sell .card {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  width: calc((100% - 40px) / 3);
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 10px 20px;
-}
-
-.sell .card i {
-  font-size: 25px;
-  margin-right: 5px;
-}
-
-.super {
-  margin-top: 50px;
-  padding: 0 3rem;
-}
-
-.super h2 {
-  color: var(--heading-color);
-  margin-bottom: 30px;
-}
-
-.super .tabs {
-  margin-bottom: 30px;
-}
-
-.super .tabs a {
-  background-color: var(--hover-color);
-  color: var(--heading-color);
-  border-radius: 10px;
-  padding: 5px 7px;
-  font-size: 13px;
-  transition: all 0.5s ease;
-}
-
-.super .tabs a:hover {
-  background-color: var(--bg-color);
-  color: var(--hover-color);
-}
-
-.super .cards {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 20px;
-}
-
-.super .card {
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 15px;
-  width: calc((100% - 80px) / 4);
-  border: 1px solid #0d1b2a;
-  border-radius: 15px;
-}
-
-.super .card img {
-  border-radius: 15px;
-}
-
-.super .card .price {
-  color: #415a77;
-}
-
-.super .card .price {
-  font-size: 10px;
-}
-
-.super .card .price span {
-  font-size: 13px;
-}
-
-.ri-btc-line {
-  font-size: 19px;
-}
-
-.card__bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.card__bottom .time {
-  font-size: 14px;
-  background-color: var(--text-color);
-  padding: 5px 7px;
-  border-radius: 10px;
-}
-
-.card__bottom .bid {
-  font-size: 15px;
-  color: var(--heading-color);
-}
-
-.super .button {
-  display: flex;
-  justify-content: center;
-  padding: 40px;
-}
-
-.super button {
-  margin-top: 10px;
-  border: 1px solid #0d1b2a;
-  border-radius: 10px;
-  background-color: var(--text-color);
-  padding: 5px 20px;
-  cursor: pointer;
-  transition: all 0.5s ease;
-}
-
-.super button:hover {
-  background-color: #fff;
-  color: var(--hover-color);
-}
-
-.best__sellers {
-  padding: 0 3rem;
-  margin-bottom: 30px;
-}
-
-.best__sellers h2 {
-  margin-bottom: 30px;
-}
-
-.best__sellers .cards {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 20px;
-}
-
-.best__sellers .card {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  background-color: #fff;
-  padding: 10px;
-  border-radius: 15px;
-  width: calc((100% - 40px) / 3);
-}
-
-.best__sellers .card img {
-  width: 20%;
-  border-radius: 15px;
-}
-
-.best__sellers .card .text {
-  display: flex;
-  flex-direction: column;
-  gap: 13px;
-}
-
-.footer {
-  padding: 0 3rem;
-  background-color: #000;
-  min-height: 30vh;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer__text {
-  font-size: clamp(20px, 4vw, 30px);
-  margin-bottom: 20px;
-  color: #415a77;
-}
-
-.footer__links {
-  margin-bottom: 20px;
-  display: flex;
-  gap: 20px;
-}
-
-.footer__links a {
-  color: var(--text-color);
-}
-
-.footer .footer__icons {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 20px;
-}
-
-.footer .footer__icons a {
-  color: var(--text-color);
   font-size: 20px;
 }
 
-.footer .footer__copyright {
-  color: var(--text-color);
+.hero {
+  margin-top: 80px;
+  min-height: calc(100vh - 80px);
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding: 0 40px;
+}
+
+.hero .left__section {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+}
+
+.hero .left__section .top h1 {
+  color: #14213d;
+  font-size: clamp(28px, 5vw, 60px);
+
+  margin-bottom: 24px;
+}
+
+.hero .left__section .top p {
+  font-size: clamp(16px, 2vw, 20px);
+  color: #14213d;
+  margin-bottom: 24px;
+}
+
+.hero .left__section button {
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.hero .left__section .buttons {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.hero .left__section button.linkedin {
+  background-color: #14213d;
+  color: #fca311;
+  transition: all 0.5s ease;
+}
+
+.hero .left__section button.linkedin:hover {
+  background-color: #fca311;
+  color: #14213d;
+}
+
+.hero .left__section button.git {
+  background-color: #e5e5e5;
+  color: #14213d;
+  transition: all 0.5s ease;
+}
+
+.hero .left__section button.git:hover {
+  background-color: #14213d;
+  color: #e5e5e5;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.bottom .icons {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.bottom .icons i {
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+}
+
+.bottom .icons i:hover {
+  background-color: #fca311;
+}
+
+.hero > img {
+  max-width: 520px;
+  width: 70%;
+  border-radius: 26px;
+}
+
+.about {
+  background-color: #e5e5e5;
+  margin-top: 60px;
+  min-height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.about .about_text h2 {
+  background-color: #fff;
+  margin-bottom: 24px;
+  border: 1px solid #14213d;
+  padding: 5px 10px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.about .about_text p {
+  margin-bottom: 24px;
+  font-size: 20px;
+  color: #14213d;
+  font-weight: 500;
+}
+
+.about .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 80%;
+}
+
+.about .card {
+  width: calc((100% - 40px) / 3);
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border-radius: 24px;
+  padding: 20px;
+}
+
+.about .cards .card > img {
+  max-width: 450px;
+  width: 100%;
+  border-radius: 20px;
+}
+
+.projects {
+  margin-top: 40px;
+  background-color: #000;
+  min-height: calc(50vh - 40px);
+  padding: 40px;
+  border-radius: 16px;
+  width: 95%;
+}
+
+.projects h2 {
+  color: #e5e5e5;
+  font-size: 36px;
+  margin-bottom: 24px;
+}
+
+.projects p {
+  margin-bottom: 24px;
+  font-weight: 300;
+  color: #e5e5e5;
+}
+
+.projects button {
+  background-color: #fff;
+  margin-bottom: 24px;
+  padding: 5px 20px;
+  border: 1px solid #14213d;
+  border-radius: 16px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.projects button:hover {
+  background-color: #fca311;
+  color: #14213d;
+  border-color: #e5e5e5;
+}
+
+.projects .boxes {
+  color: #e5e5e5;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.projects .box {
+  width: calc((100% - 60px) / 4);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 1px solid #14213d;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.contact {
+  background-color: #e5e5e5;
+  padding-top: 30px;
+  min-height: calc(50vh - 30px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.contact .boxes {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.contact .box {
+  width: calc((100% - 10px) / 2);
+  padding: 10px 20px;
+  background-color: #fff;
+  border: 1px solid #14213d;
+  border-radius: 5px;
+}
+
+.contact .box p {
+  margin-top: 10px;
+}
+
+.contact .box button {
+  background-color: #14213d;
+  color: #e5e5e5;
+  padding: 5px 8px;
+  border: 1px solid #14213d;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.contact .box button:hover {
+  background-color: #fff;
+  color: #14213d;
+  border-color: #000;
+}
+
+.footer {
+  background-color: #000;
+  min-height: calc(15vh - 20px);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.footer ul {
+  color: #e5e5e5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  padding: 25px;
+}
+
+.footer ul li {
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.footer ul li:hover {
+  color: #fca311;
+}
+
+::-webkit-scrollbar {
+  background-color: #14213d;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fca311;
 }
 
 @media screen and (max-width: 1200px) {
-  .sell .card {
-    width: calc((100% - 20px) / 2);
-  }
-  .super .card {
-    width: calc((100% - 60px) / 3);
+  /* .hero .left__section .top h1 {
+    font-size: 25px;
+  } */
+
+  /* .hero .left__section .top p {
+     font-size: 17px; 
+  }  */
+
+  .projects .box {
+    width: calc((100% - 40px) / 3);
   }
 }
 
-@media (max-width: 768px) {
-  nav .nav__links {
-    display: none;
+@media screen and (max-width: 768px) {
+  .ri-menu-line {
+    display: blo;
   }
 
+  .hero .left__section .buttons {
+    align-items: flex-start;
+  }
+
+  /* .hero .left__section .top h1 {
+    font-size: 15px;
+  } */
+
+  .hero .left__section .top p {
+    font-size: 10;
+  }
+
+  .bottom h2 {
+    font-size: 18px;
+  }
+
+  .hero > img {
+    width: 450px;
+    width: 60%;
+    border-radius: 26px;
+  }
+
+  .about .about_text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .about .about_text h2 {
+    font-size: 18px;
+    width: fit-content;
+    padding: 5px 20px;
+  }
+
+  .about .about_text p {
+    font-size: 15px;
+  }
+
+  .about .card {
+    width: calc((100% - 20px) / 2);
+  }
+
+  .projects .box {
+    width: calc((100% - 20px) / 2);
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .navbar {
+    gap: 13px;
+  }
   .ri-menu-line {
     display: block;
   }
 
-  .header {
-    margin-top: 50px;
-    flex-direction: column-reverse;
-    justify-content: flex-end;
+  .navbar ul,
+  .navbar button {
+    display: none;
   }
 
-  .header .left__section {
-    align-items: center;
+  .hero {
+    padding-top: 50px;
+    flex-direction: column-reverse;
+  }
+
+  .hero .left__section .top h1 {
+    text-align: center;
+    /* font-size: 30px; */
+  }
+
+  .hero .left__section .top p {
+    /* font-size: 17px; */
     text-align: center;
   }
 
-  .super .card {
-    width: calc((100% - 40px) / 2);
+  .hero .left__section .top .buttons {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 
-  .best__sellers .card {
-    width: calc((100% - 20px) / 2);
+  .hero .left__section .top button.git {
+    padding: 11px 18px;
   }
 
-  .footer {
-    padding-top: 30px;
+  .hero .left__section .bottom {
+    align-items: center;
+  }
+
+  .bottom h2 {
+    font-size: 15px;
+  }
+
+  .hero > img {
+    width: 450px;
+    width: 70%;
+    border-radius: 26px;
+  }
+
+  .about .about_text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    align-items: flex-start;
   }
-}
 
-@media (max-width: 575.98px) {
-  .sell .card {
+  .about .about_text h2 {
+    font-size: 15px;
+    width: fit-content;
+    padding: 5px 20px;
+  }
+
+  .about .about_text p {
+    font-size: 12px;
+  }
+
+  .hero .left__section button.git {
+    padding: 5px 15px;
+  }
+
+  .about .card {
     width: 100%;
   }
 
-  .super .card {
+  .projects .box {
     width: 100%;
   }
 
-  .best__sellers .card {
+  .contact .box {
     width: 100%;
   }
 }
